feat: add device config functionality and include config when getting device by ID
